[package]
name = "udp_stream"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.0", features = ["full", "tracing"] }
tokio-util = { version = "0.6.8", features = ["full"] }
tokio-stream = { version = "0.1" }
bytes = "1.0.0"
futures = { version = "0.3.17", features = ["thread-pool"]}