[package]
name = "udp_stream"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.0.0", features = ["full", "tracing"] }
tokio-util = { version = "0.6.8", features = ["full"] }
tokio-stream = { version = "0.1" }
bytes = "1.0.0"

pin-project-lite = { version = "0.2.7" }
futures = { version = "0.3.0", features = ["thread-pool"]}
futures-util = "0.3.0"

tracing = "0.1"
tracing-subscriber = "0.2"

# [patch.crates-io]
# futures = { path = "./futures-rs/futures", version = "0.3.0"}
# futures-util = { path = "./futures-rs/futures-util", version = "0.3.0" }
# futures-core = { path = "./futures-rs/futures-core", version = "0.3.0" }
# futures-sink = { path = "./futures-rs/futures-sink", version = "0.3.0" }
# tokio = { path = "./tokio/tokio" }
# tokio-macros = { path = "./tokio/tokio-macros", version = "1.3.0", features = ["full", "tracing"] }
# tokio-util = { path = "./tokio/tokio-util" }
# tokio-stream = { path = "./tokio/tokio-stream" }